--- a/Latex/Latex/Hello_World/中文.tex
+++ b/Latex/Latex/Hello_World/中文.tex
@@ -14,7 +14,7 @@
     \usetikzlibrary{arrows,shapes,chains,positioning}
 \graphicspath{{figures/}}
 
-\setCJKmainfont{WenQuanYi Micro Hei}	% 设置字体
+% \setCJKmainfont{WenQuanYi Micro Hei}	% 设置字体
 
 \title{中文\TeX{}简介}
 \author{张卫斌}
