--- a/Latex/Latex/Hello_World/hello_world.tex
+++ b/Latex/Latex/Hello_World/hello_world.tex
@@ -101,6 +101,11 @@
     \tableofcontents\label{toc}    % to make a clickable toc, need hyperref package.
 \end{multicols}
 
+
+TODO:
+\begin{itemize}
+    \item style for code, for little chunks of code, for large chunks of code and their output.
+\end{itemize}
 \include{hello_world/Introduction}
 \include{hello_world/Basic}
 \include{hello_world/Math}
