--- a/Latex/Latex/Hello_World/hello_world/Basic.tex
+++ b/Latex/Latex/Hello_World/hello_world/Basic.tex
@@ -643,7 +643,7 @@ Similarly, we can apply \verb|multirow[pos]{num}{*}{item}| when include
 \begin{center}
     \begin{tabular}{|l|r|r|}
 	\hline
-		& \multicolumn{2}{p{3.5cm}}{\centering Distance from sum
+		& \multicolumn{2}{p{3.5cm}|}{\centering Distance from sum
 	        \\ (kilometer)}\\
 	\cline{2-3} 
 	\multicolumn{1}{|c|}{Planet}	& \multicolumn{1}{c|}{Maximum}	
