--- a/Latex/Latex/Hello_World/hello_world/Metaphysics.tex
+++ b/Latex/Latex/Hello_World/hello_world/Metaphysics.tex
@@ -73,6 +73,9 @@ So this should be the conflicts between different options used in loading
 \emph{graphicx} package. If you load only the \textbf{tikz} package, 
 then everything works perfectly.
 
+% graphics
+! Paragraph ended before \\Gin@iii was complete.    \\
+You will encounter this error if you load \emph{graphics} rather than \emph{graphicx}.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{xcolor}
 \package{xcolor} option error:
