--- a/Latex/Latex/Hello_World/hello_world/Metaphysics.tex
+++ b/Latex/Latex/Hello_World/hello_world/Metaphysics.tex
@@ -18,8 +18,8 @@ package loading must be a subset of the options given at the first loading (exce
 
 However sometimes packages might be loaded in the document class already, or
 there are constraints in the package order that prevents the reordering of the 
-packages. Then \command{\textbackslash{}PassOptionsToPackage} helps. It can even
-be loaded before \command{\textbackslash{}documentclass}. It gives the specified 
+packages. Then \command|\PassOptionsToPackage| helps. It can even
+be loaded before \command|\documentclass|. It gives the specified 
 options to the package without loading the package.
 
 Adding the options to the global options can also be a solution, but it is not the
