--- a/Latex/Latex/Hello_World/hello_world.tex
+++ b/Latex/Latex/Hello_World/hello_world.tex
@@ -6,6 +6,7 @@
 
 % \usepackage{syntonly}
 \usepackage{amsmath, amsthm, amssymb}
+\usepackage{xiunitx}	% provide commands for various SI units
 \usepackage{bm}	% bold math
 \usepackage{enumitem}	% style of list item
 \usepackage{fancyhdr}	% set header and footer
