--- a/Latex/Latex/Hello_World/hello_world.tex
+++ b/Latex/Latex/Hello_World/hello_world.tex
@@ -6,7 +6,7 @@
 
 % \usepackage{syntonly}
 \usepackage{amsmath, amsthm, amssymb}
-\usepackage{xiunitx}	% provide commands for various SI units
+\usepackage{siunitx}	% provide commands for various SI units
 \usepackage{bm}	% bold math
 \usepackage{enumitem}	% style of list item
 \usepackage{fancyhdr}	% set header and footer
@@ -51,6 +51,7 @@
 	% this one, otherwise it will be loaded twice, and causing errors.
 \graphicspath{{figures/}}    % note the double {} here.
 \usepackage{wrapfig}	% wrap figures with text
+\usepackage{adjustbox}	% extend table width
 
 \usepackage{eso-pic}	% AddToShipoutPictureBG
 \usepackage{geometry}	% set margin
