--- a/Latex/Latex/Hello_World/hello_world/Tikz.tex
+++ b/Latex/Latex/Hello_World/hello_world/Tikz.tex
@@ -1,5 +1,20 @@
 % \usepackage{tikz}
 
+% \begin{tikzpicture}[
+%     font=\sffamily,
+%     every matrix/.style={ampersand replacement=\&,column sep=2cm, row sep=2cm},
+%     source/.style={draw, thick, rounded corners, fill=yellow!20, inner sep=.3cm},
+%     process/.style={draw, thick, cirlce, fill=blue!20},
+%     sink/.style={source, fill=green!20},
+%     dots/.style={gray, scale=2},
+%     to/.style={->,>=stealth',shorten >= 1pt, semithick, font=\sffamily\footnotesize},
+%     every node/.style={align=center}
+% ]
+%     \matrix{
+%         \node[]}
+% \end{tikzpicture}
+
+
 \chapter{Tikz}
 This section introduce how to use tika package to produce wanted plots.
 
