--- a/Latex/Latex/Hello_World/hello_world/Basic.tex
+++ b/Latex/Latex/Hello_World/hello_world/Basic.tex
@@ -769,6 +769,19 @@ Use the \emph{tabularx} environment instead of \emph{tabular} from package \pack
 \end{center}
 
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\subsection{Wide table}
+use package \package{adjustbox} to fit the width of your table to pages.
+
+\begin{adjustbox}{center}
+    \large
+    \begin{tabular}{|l|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+	\hline
+	Name    & lab 1 & lab 2 & lab 3 & lab 4 & lab 5 & lab 6 & lab 7 & lab 8 & lab 9 & lab 10 & lab 11 & lab 12 & lab 13    \\
+	\hline
+    \end{tabular}
+\end{adjustbox}
+
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
