--- a/Latex/Latex/Hello_World/fonts.tex
+++ b/Latex/Latex/Hello_World/fonts.tex
@@ -7,6 +7,7 @@
 
 字形是一个字符的具体图形表现形式，一个字符可以有多个字形，比如汉字中的“強／强”、“戶／户／戸”；字样是一组相同风格样式的字形的集合，比如中文字样有宋、仿、楷、黑、隶、篆等；一种字样可以对应电脑上的几种字体。
 
+
 \section{字样}
 \label{sec:typeface}
 拉丁字母的字样主要有三大类：Serif（Roman）、Sans Serif~和~Mono-space~（Typewriter）。Serif~的笔画边缘部分有些装饰，类似于中文的宋体、仿宋、楷体、魏书等。Sans Serif~的笔画则是平滑的，类似于中文的黑体。Sans~这个词来源于法语，就是“没有”的意思。Monospace~则是等宽字样。
@@ -28,6 +29,14 @@
     \bottomrule
 \end{tabular}
 \end{table}
+
+\section{中文字体设计}
+\begin{enumerate}
+    \item 平衡（黄金分割）
+    \item 横细竖粗
+    \item 上紧下松
+    \item 左紧右松
+\end{enumerate}
 
 \section{字体格式}
 \label{sec:font}
