--- a/Latex/Latex/Hello_World/hello_world.tex
+++ b/Latex/Latex/Hello_World/hello_world.tex
@@ -8,6 +8,8 @@
 \usepackage{amsmath, amsthm, amssymb}
 \usepackage{siunitx}	% provide commands for various SI units
 \usepackage{bm}	% bold math
+\usepackage[first=0, last=9]{lcg}   % pseudo random number generator
+
 \usepackage{enumitem}	% style of list item
 \usepackage{fancyhdr}	% set header and footer
 \usepackage{float}	% provide the placement option 'H', enforcing the placement exactly at that point of floating env.
@@ -41,9 +43,10 @@
 \usepackage{makeidx}
 \usepackage{makecell}	% line breaking in a table cell
 \usepackage{multicol}	% multicolumns environment in a table
+\usepackage{multirow}
 % \usepackage{tabbing}	% tabbing env.
 \usepackage{tabularx}	% another table environment
-\usepackage[dvipsnames]{xcolor}   % colored text
+\usepackage[table, dvipsnames]{xcolor}   % colored text
 \usepackage{tikz}
     \usetikzlibrary{arrows,shapes,chains,positioning}
     \usetikzlibrary{decorations.markings}
