--- a/Documents/scripts.tex
+++ b/Documents/scripts.tex
@@ -1,7 +1,7 @@
 \documentclass[landscape]{article}
 
 \usepackage{geometry}
-    \geometry{left=2cm, right=2cm}
+    \geometry{left=1cm, right=1cm}
 \usepackage{multirow}
 \usepackage{tabularx}
 \usepackage{adjustbox}
@@ -100,7 +100,7 @@
 	% Js
 	typeof()    &
 	% Lua
-	type()
+	type()	\\
     
     \hline
     \multirow[c]{3}{*}{Functions}	& 
@@ -176,3 +176,12 @@
 \end{adjustbox}
 
 \end{document}
+
+Language: shell awk perl python tcl lua js
+Basic: types, values, objects, properties, functions and syntax and semantics
+
+% Js
+type: Undefined, Null, Boolean, Number, String and Symbol
+%% substitution
+
+
